<resources>
    <string name="app_name">Huda_Application</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="password">Enter Password</string>
    <string name="email">Enter Email</string>
    <string name="Login"><b>Login</b></string>
    <string name="forgotpassword">Forgot Password? <b>Reset</b></string>
    <string name="dontAccount">Don\'t Have an Account? <b>Sign Up</b></string>
    <string name="alreadyAccount">Already Registered? <b>Sign In</b></string>
    <string name="register">Register</string>
    <string name="language">English</string>
    <string name="FirstName">Enter First Name</string>
    <string name="LastName">Enter Last Name</string>
    <string name="EnterEmail">Enter Email</string>
    <string name="EnterPass">Enter Password</string>
    <string name="Reenter">Re-enter Password</string>
    <string name="reset">Send Reset</string>
    <string name="loginHeader">ACCOUNT LOGIN</string>
    <string name="registerHeader">REGISTER ACCOUNT</string>
    <string name="forgotPassHeader">RESET PASSWORD</string>
    <string name="login_dialog">Enter your credentials below to log in.</string>
    <string name="regDiaglogue">Complete the fields below to register an account. You will receive a verification email upon successful registration.</string>
    <string name="forgotDialogue">Enter the email associated with your account and you will receive instructions to reset your password.</string>
    <string name="home">HOME</string>
    <string name="Annoucment">ANNOUNCEMENTS</string>
    <string name="services">SERVICES</string>
    <string name="story">OUR STORY</string>
    <string name="partners">PARTNERS</string>
    <string name="contact">CONTACT US</string>
    <string name="patients_page">APPOINTMENTS</string>
    <string name="logout">Logout</string>
    <string name="healthservices">Free Health Services</string>
    <string name="PrimaryNewLogin">PRIMARY</string>
    <string name="MentalNewLogin">MENTAL</string>
    <string name="VisionNewLogin">VISION</string>
    <string name="DentalNewLogin">DENTAL</string>
    <string name="SpecialityNewLogin">SPECIALTY</string>
    <string name="HaveAnAccount">Have An Account? <b>Login</b></string>
    <string name="DontHaveAnAccount">Don\'t Have An Account?</string>
    <string name="SignUp">Sign Up</string>
    <string name="PrimaryCare">PRIMARY CARE</string>
    <string name="MentalCare">MENTAL CARE</string>
    <string name="VisionHealth">VISION CARE</string>
    <string name="Dental">DENTAL CARE</string>
    <string name="speciality">SPECIALTY CARE</string>
    <string name="Inbox">INBOX</string>
    <string name="NewPatient">New Patient</string>
    <string name="patientForm">New Patient Form</string>
    <string name="checkIn">Check-in</string>
    <string name="MedicalChart">Medical Chart</string>
    <string name="Registration">REGISTRATION</string>
    <string name="Date">Date (MM-DD-YY)</string>
    <string name="VisitReason">Visit Reason</string>
    <string name="Sex">Sex</string>
    <string name="DOB">DOB (MM-DD-YYYY)</string>
    <string name="Address">Address (1234 Street St.)</string>
    <string name="City">City</string>
    <string name="State">State</string>
    <string name="ZipCode">Zip Code</string>
    <string name="SSN">SSN (123-12-1234)</string>
    <string name="HomePhone">Home Phone (123-123-1234)</string>
    <string name="CellPhone">Cell Phone (123-123-1234)</string>
    <string name="PreferredNumber">Preferred Number (Home or Mobile)</string>
    <string name="ConsentToCall">Consent to Call? (Yes or No)</string>
    <string name="ConsentToText">Consent to Text? (Yes or No)</string>
    <string name="InsuranceProvider">Insurance (Type NA for no insurance)</string>
    <string name="Email">Email (Same as Registration Email)</string>
    <string name="SelectRace">Please Select a Race:</string>
    <string name="Black">Black/African American</string>
    <string name="White">White/Caucasian</string>
    <string name="Asian">Asian</string>
    <string name="MiddleEastern">Middle Eastern/North African</string>
    <string name="Hispanic">Hispanic/Latino</string>
    <string name="NativeAmerican">Native American</string>
    <string name="NativeHawaiian">Native Hawaiian or Other Pacific Islander</string>
    <string name="SelectEthnicity">Please Select an Ethnicity:</string>
    <string name="HispanicEthnicity">Hispanic or Latino/a</string>
    <string name="NotHispanicEthnicity">Not Hispanic or Latino/a</string>
    <string name="PreferredLanguage">Preferred Language</string>
    <string name="Translator">Translator Needed? (Yes or No)</string>
    <string name="SocialInfo">The following information does NOT affect your right to care at HUDA, but it is needed to continue providing our free services.</string>
    <string name="MaritalStatus">Marital Status</string>
    <string name="HouseholdIncome">Household Income</string>
    <string name="Every">Every</string>
    <string name="Week">Week</string>
    <string name="TwoWeeks">Two Weeks</string>
    <string name="Months">Month</string>
    <string name="Year">Year</string>
    <string name="HouseholdSize">Household Size</string>
    <string name="EmploymentStatus">Employment Status</string>
    <string name="Unemployed">Unemployed</string>
    <string name="EmployedFullTime">Employed (Full Time)</string>
    <string name="EmployedPartTime">Employed (Part Time)</string>
    <string name="SelfEmployed">Self-Employed</string>
    <string name="Student">Student</string>
    <string name="Retired">Retired</string>
    <string name="SeekingEmployment">Seeking Employment</string>
    <string name="Occupation">Occupation</string>
    <string name="VeteranStatus">Are you a Veteran?</string>
    <string name="EmergencyContact">Emergency Contact Information</string>
    <string name="EmergencyContactName">Name</string>
    <string name="RelationshipToPatient">Relationship to Patient</string>
    <string name="EmergencyContactPhone">Contact Phone (123-123-1234)</string>
    <string name="I">I,</string>
    <string name="PatientConsent">voluntarily accept treatment/counseling as recommended and
explained by the HUDA staff. I understand that I am free to withdraw my consent and discontinue treatment at any time.
In addition, I have been informed of my rights to refuse to participate in research activities. I understand that I have rights
as a recipient of free services provided by the HUDA Clinic. I have been advised on the HUDA Clinic’s NO CALL NO SHOW
Policy regarding primary care and specialty services and agree to follow it. Further, I have been advised of the Federal
Confidentiality Regulation and been given a copy of the Confidentiality Notice to review.</string>
    <string name="YourName">Your Name</string>
    <string name="VoluntaryConsent">voluntarily accept treatment/counseling as recommended </string>
    <string name="PatientNamePrinted">Patient Name (Printed)</string>
    <string name="PatientSignature">Patient/Guardian Signature</string>
    <string name="TodayDate">Date (MM-DD-YYYY)</string>
    <string name="SubmitForm">Submit</string>
    <string name="NextForm">Next Form</string>
    <string name="FullName">Full Name</string>
    <string name="Birthday">Birthday</string>
    <string name="AppointmentTime">Appointment Time</string>
    <string name="EnterCheckinEmail">Enter Email</string>
    <string name="CheckInButton">Check-In</string>
    <string name="ContactUsHeader">CONTACT US</string>
    <string name="ContactUsPara">HUDA, a Free Community Health Clinic\nin Metro Detroit</string>
    <string name="CallHeader">Call:</string>
    <string name="ClinicPhone"><u>(313) 865-8446</u></string>
    <string name="AddressHeader">Address:</string>
    <string name="ClinicAddress"><u>13240 Woodrow Wilson St.\nDetroit, MI 48238</u></string>
    <string name="SocialMediaHeader">Find Us On:</string>
    <string name="OurStoryHeader">OUR STORY</string>
    <string name="History">HISTORY OF THE HUDA CLINIC</string>
    <string name="HistoryPara">HUDA Clinic first opened its doors in May 2004 to serve the uninsured population of the Detroit area. The clinic initially operated on funds gathered by the Muslim community of Metro Detroit.</string>
    <string name="HistPara">When it began, the HUDA Clinic provided solely medical services. We then moved from our original facility at the Muslim Center of Detroit into a new, larger facility on Woodrow Wilson Street. Since then, we have expanded our care to include a full range of dental, vision care, podiatry, and mental health services, as well as a plethora of specialty services available at no-cost to our patients. Our new facility has allowed us to expand our services and our service times, but none of that would be possible without the generous support of our donors and volunteers.</string>
    <string name="AnnouncementsHeader">ANNOUNCEMENTS</string>
    <string name="ClosureHeader">2022 Holiday Closure Dates</string>
    <string name="Date1">Wednesday November 23, 2022 - Monday November 28th , 2022</string>
    <string name="Date2">Saturday December 24th, 2022</string>
    <string name="Date3">Saturday December 31st, 2022</string>
    <string name="Event1">Thanksgiving</string>
    <string name="Event2">Christmas Eve</string>
    <string name="AuthFormHeader">HUDA Authorization for Release of Information</string>
    <string name="AuthFormBody">Occasionally it is necessary for the HUDA Clinic to consult with other providers, such as specialists or other facilities, such as hospitals or labs to provide you, our patient, with what our providers believe to be the most appropriate course of action for your treatment. By signing this form, you give us, HUDA Clinic, permission to share your pertinent medical information with other providers/facilities to best complete your treatment or request medical records from previous providers on your behalf.</string>
    <string name="AuthFormBody2">I, the patient, hereby authorize HUDA Clinic and its affiliates, its employees and agents, to use and disclose protected health information (e.g. information relating to the diagnosis, treatment, and health care services provided or to be provided to me and which identifies my name, address, social security number, date of birth) for the purpose of helping to coordinate my medical care. I understand that any personal health information or other information released to the person or organization identified above may be subject to re-disclosure by such person/organization and may be no longer protected by applicable federal and state privacy laws. I understand that I have a right to revoke this authorization by providing written notice to HUDA Clinic at any time. However, this authorization may not be revoked if its employees or agents have taken action on this authorization prior to receiving my written notice. I also understand I have the right to have a copy of this authorization.I further understand that this authorization is voluntary and that I may refuse to sign this authorization. I also understand that should I refuse to sign this form I greatly limit the services that HUDA Clinic will be able to perform for me. I understand that should I refuse to sign this,the HUDA Clinic will not be able to prescribe me medication to any pharmacy, nor be able to provide me with any lab work, physician referrals or medical record requests.</string>
    <string name="AuthFormBody3">We take protecting your identity very seriously and do not share any unnecessary information with any of our partners.</string>
</resources>