<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".NewLogin">

    <TextView
        android:id="@+id/DentalHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="51dp"
        android:background="@drawable/servicebuttonstyle"
        android:minWidth="140dp"
        android:padding="10dp"
        android:paddingTop="10dp"
        android:text="@string/DentalNewLogin"
        android:textAlignment="center"
        android:textColor="@color/hudaBlue"
        android:textSize="22sp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@+id/PrimaryHeader"
        app:layout_constraintTop_toBottomOf="@+id/profileIcon" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/language2"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/buttonstyle"
        android:bottomLeftRadius="10dp"
        android:bottomRightRadius="10dp"
        android:foreground="@drawable/globe__3_"
        android:foregroundGravity="center"
        android:textColor="#ffffff"
        android:topLeftRadius="10dp"
        android:topRightRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />


    <TextView
        android:id="@+id/PrimaryHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="51dp"
        android:background="@drawable/servicebuttonstyle"
        android:minWidth="140dp"
        android:padding="10dp"
        android:text="@string/PrimaryNewLogin"
        android:textAlignment="center"
        android:textColor="@color/hudaBlue"
        android:textSize="22sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileIcon" />

    <TextView
        android:id="@+id/MentalHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/servicebuttonstyle"
        android:minWidth="140dp"
        android:padding="10dp"
        android:text="@string/MentalNewLogin"
        android:textAlignment="center"
        android:textColor="@color/hudaBlue"
        android:textSize="22sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PrimaryHeader" />

    <TextView
        android:id="@+id/SpecialtyHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@drawable/servicebuttonstyle"
        android:minWidth="140dp"
        android:padding="10dp"
        android:text="@string/SpecialityNewLogin"
        android:textAlignment="center"
        android:textColor="@color/hudaBlue"
        android:textSize="22sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MentalHeader" />

    <TextView
        android:id="@+id/VisionHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/servicebuttonstyle"
        android:minWidth="140dp"
        android:padding="10dp"
        android:text="@string/VisionNewLogin"
        android:textAlignment="center"
        android:textColor="@color/hudaBlue"
        android:textSize="22sp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@+id/MentalHeader"
        app:layout_constraintTop_toBottomOf="@+id/DentalHeader" />

    <TextView
        android:id="@+id/HaveAnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="81dp"
        android:layout_marginTop="138dp"
        android:text="@string/HaveAnAccount"
        android:textAlignment="center"
        android:textColor="@color/hudaBlue"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@+id/LoginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SpecialtyHeader" />

    <TextView
        android:id="@+id/DoNotHaveAnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="10dp"
        android:text="@string/DontHaveAnAccount"
        android:textAlignment="center"
        android:textColor="@color/hudaBlue"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@+id/SignUpButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HaveAnAccount" />

    <TextView
        android:id="@+id/LoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="138dp"
        android:layout_marginEnd="90dp"
        android:text="@string/Login"
        android:textAlignment="center"
        android:textColor="@color/hudaBlue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/HaveAnAccount"
        app:layout_constraintTop_toBottomOf="@+id/SpecialtyHeader"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/SignUpButton"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:text="@string/SignUp"
        android:textAlignment="center"
        android:textColor="@color/hudaBlue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/DoNotHaveAnAccount"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/profileIcon"
        android:layout_width="191dp"
        android:layout_height="188dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="110dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/huda_logo" />

    <!--    <Spinner-->
    <!--        android:id="@+id/servicesSpinner"-->
    <!--        android:layout_width="300dp"-->
    <!--        android:layout_height="55dp"-->
    <!--        android:layout_marginTop="23dp"-->
    <!--        android:background="@drawable/edittextstyle"-->
    <!--        android:textAlignment="center"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/MentalHeader" />-->
</androidx.constraintlayout.widget.ConstraintLayout>