<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainApplication">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/partnersPage"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="96dp"
        android:background="@drawable/buttonstyle"
        android:text="@string/partners"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ourStoryPage" />

    <ImageView
        android:id="@+id/hudaLogo3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="213dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/huda_logo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/announcementsPage"
        android:layout_width="220dp"
        android:layout_height="52dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="96dp"
        android:background="@drawable/buttonstyle"
        android:text="@string/Annoucment"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hudaLogo3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Patients"
        android:layout_width="220dp"
        android:layout_height="52dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="96dp"
        android:background="@drawable/buttonstyle"
        android:text="@string/patients_page"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/announcementsPage" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/servicesPage"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="96dp"
        android:background="@drawable/buttonstyle"
        android:text="@string/services"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Patients" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ourStoryPage"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="96dp"
        android:background="@drawable/buttonstyle"
        android:text="@string/story"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/servicesPage" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/contactUsPage"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="159dp"
        android:background="@drawable/buttonstyle"
        android:text="@string/contact"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/partnersPage" />

    <TextView
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="70dp"
        android:text="Logout"
        android:textColor="#043670"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/hudaLogo3"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>